# shen-rust

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  Cargo.toml  DEMO.md  LICENSE  Makefile  PERFORMANCE.md  README.md  STATUS.md  flake.nix  sb.toml
.github/workflows/: ci.yml
crates/klcompile/: Cargo.toml
crates/klcompile/src/: lib.rs  main.rs
crates/ratatoskr-build/: Cargo.toml
crates/ratatoskr-build/src/: main.rs
crates/shen-cedar/: Cargo.toml
crates/shen-cedar/benches/: gc_module_bench.rs  gc_roots_aot_spike.rs  jit_spike.rs  value_repr_spike.rs  vm_vs_treewalk.rs  warm_typecheck.rs
crates/shen-cedar/src/: cons.rs  env.rs  error.rs  lib.rs  primitives.rs  value.rs
crates/shen-cedar/src/aot/: generated.rs  mod.rs  runtime.rs
crates/shen-cedar/src/aot/kernel/: compiler.rs  core.rs  declarations.rs  dict.rs  extension_expand_dynamic.rs  extension_features.rs  extension_launcher.rs  init.rs  load.rs  macros.rs  mod.rs  prolog.rs  reader.rs  sequent.rs  stlib.rs  sys.rs  t_star.rs  toplevel.rs  track.rs  types.rs  writer.rs  yacc.rs
crates/shen-cedar/src/cedar/: primitives.rs  types.rs
crates/shen-cedar/src/gc/: heap.rs  mod.rs  node.rs
crates/shen-cedar/src/interp/: boot.rs  eval.rs  mod.rs
crates/shen-cedar/src/jit/: codegen.rs  mod.rs
crates/shen-cedar/src/kl/: ast.rs
crates/shen-cedar/src/vm/: bytecode.rs  compiler.rs  exec.rs  mod.rs  opcode.rs  stats.rs
crates/shen-cedar/tests/: aot_kernel_bench.rs  aot_smoke.rs  boot_kernel.rs  budget_cancel.rs  cedar_smoke.rs  eval_smoke.rs  jit_closure_differential.rs  jit_differential.rs  parse_kernel.rs  vm_differential.rs
crates/shen-rust/: Cargo.toml
crates/shen-rust/benches/: aot_vs_vm_vs_treewalk.rs  authz_bench_data.shen  authz_served.rs  gc_boundedness.rs  gc_module_bench.rs  gc_spike.rs  jit_spike.rs  jit_winA_spike.rs  normal_form_aot.rs  value_repr_spike.rs  vm_vs_treewalk.rs  warm_typecheck.rs
crates/shen-rust/src/: env.rs  lib.rs  primitives.rs  symbol.rs  value.rs
crates/shen-rust/src/aot/: mod.rs  overlay.rs  runtime.rs
crates/shen-rust/src/aot/kernel/: compiler.rs  core.rs  declarations.rs  dict.rs  extension_expand_dynamic.rs  extension_features.rs  extension_launcher.rs  extension_programmable_pattern_matching.rs  init.rs  load.rs  macros.rs  mod.rs  prolog.rs  reader.rs  sequent.rs  stlib.rs  sys.rs  t_star.rs  toplevel.rs  track.rs  types.rs  writer.rs
crates/shen-rust/src/gc/: heap.rs  mod.rs  stack.rs
crates/shen-rust/src/interp/: boot.rs  eval.rs  guard_types_link.rs  mod.rs  tc_cache.rs
crates/shen-rust/src/jit/: codegen.rs  ffi.rs  mod.rs
crates/shen-rust/src/kl/: parser.rs
crates/shen-rust/src/vm/: compiler.rs  exec.rs  mod.rs  opcode.rs  stats.rs
crates/shen-rust/tests/: aot_kernel_bench.rs  aot_overlay.rs  aot_redefine_coherence.rs  aot_smoke.rs  boot_kernel.rs  budget_cancel.rs  cedar_smoke.rs  cli_launcher.rs  error_robustness.rs  eval_smoke.rs  gc_stress.rs  io_coverage.rs  jit_closure_differential.rs  jit_differential.rs  jit_winA_differential.rs  library.rs  parse_kernel.rs  primitives_coverage.rs  reader_fuzz.rs  tc_cache_differential.rs  vm_differential.rs
crates/shengen-rust/: Cargo.toml
crates/shengen-rust/src/: main.rs
crates/yggdrasil-build/: Cargo.toml
crates/yggdrasil-build/src/: main.rs
design/: HANDOFF.md  aot-loaded-productionization-handoff.md  execution-engine-roadmap.md  gc-conversion-handoff.md  gc-step2-collector-handoff.md  gc-step3-open-questions.md  gc-step3-value-flip-handoff.md  jit-j1-handoff.md  jit-productionization-plan.md  jit-spike-handoff.md  jit-winA-productionization-plan.md  perf-handoff.md  perf-next-target-handoff.md  perf-state-and-gc-ladder.md  runtime-execution-strategy.md  value-representation.md  vm-implementation-handoff.md
examples/shen-cedar-authz/: Cargo.toml  README.md  authz.cedarschema
examples/shen-cedar-authz/examples/: equiv.rs  gate.rs  generate.rs  reaches_equiv.rs  verify.rs
examples/shen-cedar-authz/spec/: authz.shen  verify.shen
examples/shen-cedar-authz/src/: lib.rs
kernel/klambda/: PROVENANCE.md  compiler.kl  core.kl  declarations.kl  dict.kl  extension-expand-dynamic.kl  extension-features.kl  extension-launcher.kl  extension-programmable-pattern-matching.kl  init.kl  load.kl  macros.kl  prolog.kl  reader.kl  sequent.kl  stlib.kl  sys.kl  t-star.kl  toplevel.kl  track.kl  types.kl  writer.kl
scripts/: codegen-kernel-aot.sh  codegen-shen-aot.sh  coverage.sh  cross-port-bench.sh  gates.sh  kernel-aot-audit.sh  kernel-tests.sh  shen-cedar-equiv.sh  shen-check.sh  shengen-codegen.sh  tcb-audit.sh  warm-bench.sh
specs/: core.shen
