[workspace]
resolver = "2"
members = [
    "crates/shen-rust",
    "crates/shengen-rust",
    "crates/klcompile",
    "bin/shen-rust",
    "examples/shen-cedar-authz",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "BSD-3-Clause"
authors = ["Reuben Brooks"]
repository = "https://github.com/pyrex41/shen-rust"

[workspace.dependencies]
shen-rust = { path = "crates/shen-rust" }
shengen-rust = { path = "crates/shengen-rust" }
klcompile = { path = "crates/klcompile" }
cedar-policy = "4"

# Release profile tuned for the AOT kernel modules (~12 MB generated).
# opt-level=3 + *thin* LTO + codegen-units=1 measured ~5% faster on
# --kernel-tests than the old opt2/no-LTO/cgu16 settings (paired interleaved,
# min-of-6: 2.93s vs 3.08s, 2026-06-10) at the same ~1 min clean build and a
# 27% smaller binary. The earlier "LTO costs 8+ min / >8 GB RSS" note was
# *fat* LTO (lto = true) — keep that off; thin is cheap.
[profile.release]
lto = "thin"
opt-level = 3
codegen-units = 1
