[package]
name = "klcompile"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Compile KL (.kl) source files to Rust function bodies that the shen-rust runtime can register as native functions."

[[bin]]
name = "klcompile"
path = "src/main.rs"

[dependencies]
shen-rust = { workspace = true }
