[package]
name = "ratatoskr-build"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Ratatoskr stage-2 builder: turn a shaken Shen directory (kernel.kl + user .kl + manifest) into a standalone Cargo project that boots shen-rust from the subset and runs the user program."

[[bin]]
name = "ratatoskr-build"
path = "src/main.rs"

[dependencies]
klcompile = { workspace = true }
