[package]
name = "shen-cedar"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Shen language port hosted in Rust with first-class AWS Cedar integration"

[dependencies]
cedar-policy = { workspace = true }
smallvec = "1"

# Stage-D measurement instrument (paired A/B, no external deps).
# `harness = false` → it's an ordinary `main`, run with
# `cargo run --release --bench vm_vs_treewalk`.
[[bench]]
name = "vm_vs_treewalk"
harness = false

# Spike: word-sized tagged Value vs current 24-byte Rc enum (JIT prereq
# de-risk). `cargo bench --bench value_repr_spike`.
[[bench]]
name = "value_repr_spike"
harness = false

# Spike: does the Copy-heap-ref list win survive a REAL mark-sweep collector?
# The gating experiment for the GC ladder. `cargo bench --bench gc_spike`.
[[bench]]
name = "gc_spike"
harness = false

