[package]
name = "shen-cedar"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Shen language port hosted in Rust with first-class AWS Cedar integration"

[dependencies]
cedar-policy = { workspace = true }
smallvec = "1"

# Stage-D measurement instrument (paired A/B, no external deps).
# `harness = false` → it's an ordinary `main`, run with
# `cargo run --release --bench vm_vs_treewalk`.
[[bench]]
name = "vm_vs_treewalk"
harness = false

# Spike: word-sized tagged Value vs current 24-byte Rc enum (JIT prereq
# de-risk). `cargo bench --bench value_repr_spike`.
[[bench]]
name = "value_repr_spike"
harness = false

# Spike: does the Copy-heap-ref list win survive a REAL mark-sweep collector?
# The gating experiment for the GC ladder. `cargo bench --bench gc_spike`.
[[bench]]
name = "gc_spike"
harness = false

# Spike: §6d gate — can the GC find roots in AOT-compiled Rust frames via a
# conservative native-stack scan? `cargo bench --bench gc_roots_aot_spike`.
[[bench]]
name = "gc_roots_aot_spike"
harness = false

# Step 2: the real `src/gc/` collector run through the SAME list workload as
# gc_spike, to confirm a material fraction of the 3.34x survives the production
# block-allocated heap. `cargo bench --bench gc_module_bench`.
[[bench]]
name = "gc_module_bench"
harness = false

# Spike: GC ladder rung 3 — does Cranelift-JIT'd native code, operating on the
# word-sized `Copy` Value, materially beat the interpreter dispatch path?
# Three shapes (fib / sumto-acc / cons-build), three engines (tree-walk /
# AOT-direct-dispatch / JIT), paired min-of-N. `cargo run --release --bench
# jit_spike`. See `design/jit-spike-handoff.md`.
[[bench]]
name = "jit_spike"
harness = false

# Cranelift, dev-only — pulled in solely by the `jit_spike` bench (rung 3 of the
# perf ladder). Not a runtime dependency of the crate.
[dev-dependencies]
cranelift-codegen = "0.132"
cranelift-frontend = "0.132"
cranelift-jit = "0.132"
cranelift-module = "0.132"
cranelift-native = "0.132"

