[package]
name = "shen-rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Shen language port hosted in Rust with first-class AWS Cedar integration"

[dependencies]
cedar-policy = { workspace = true }
smallvec = "1"

# Cranelift JIT (GC ladder rung 3, productionization stage J1). Optional and
# off by default so non-JIT builds stay lean and gates are bisectable; enabled
# via `--features jit`. See `design/jit-j1-handoff.md`.
cranelift-codegen = { version = "0.132", optional = true }
cranelift-frontend = { version = "0.132", optional = true }
cranelift-jit = { version = "0.132", optional = true }
cranelift-module = { version = "0.132", optional = true }
cranelift-native = { version = "0.132", optional = true }

[features]
# `jit` is OFF by default. The Cranelift JIT (`src/jit/`) is an experimental,
# paused tier — proven on aarch64 but falsified for the type-checker's closures
# (`design/jit-productionization-plan.md` §5), and its codegen is aarch64-only
# (it panics in Cranelift's x86-64 emitter). Off-by-default keeps the standard
# build lean, portable, and Cranelift-free, and keeps `cargo test --workspace`
# cross-platform. Enable with `--features jit`, then gate at runtime with
# `SHEN_RUST_JIT=1`.
default = []
# Compile the Cranelift JIT engine (`src/jit/`) into the crate.
jit = [
    "dep:cranelift-codegen",
    "dep:cranelift-frontend",
    "dep:cranelift-jit",
    "dep:cranelift-module",
    "dep:cranelift-native",
]

# Stage-D measurement instrument (paired A/B, no external deps).
# `harness = false` → it's an ordinary `main`, run with
# `cargo run --release --bench vm_vs_treewalk`.
[[bench]]
name = "vm_vs_treewalk"
harness = false

# DECISIVE 3-way: tree-walk vs bytecode VM vs AOT-native (klcompile output)
# on the same fib/sumto/count-down-list workloads. `cargo run --release
# --bench aot_vs_vm_vs_treewalk`.
[[bench]]
name = "aot_vs_vm_vs_treewalk"
harness = false

# Warm/served measurement: does the VM beat the tree-walker on a *repeated*
# type-check of the heavy kernel corpus (the warm thesis the one-shot metric
# can't test)? `cargo run --release --bench warm_typecheck` (tree-walk) vs
# `SHEN_RUST_VM=1 … ` (VM); paired via `scripts/warm-bench.sh`.
[[bench]]
name = "warm_typecheck"
harness = false

# Spike: word-sized tagged Value vs current 24-byte Rc enum (JIT prereq
# de-risk). `cargo bench --bench value_repr_spike`.
[[bench]]
name = "value_repr_spike"
harness = false

# Spike: does the Copy-heap-ref list win survive a REAL mark-sweep collector?
# The gating experiment for the GC ladder. `cargo bench --bench gc_spike`.
[[bench]]
name = "gc_spike"
harness = false

# Spike: §6d gate — can the GC find roots in AOT-compiled Rust frames via a
# conservative native-stack scan? `cargo bench --bench gc_roots_aot_spike`.
[[bench]]
name = "gc_roots_aot_spike"
harness = false

# GC Step 4 boundedness demo: a served loop's heap footprint plateaus with
# request-mode collection on, and grows monotonically without it. Machine-
# checked. `cargo run --release --bench gc_boundedness`.
[[bench]]
name = "gc_boundedness"
harness = false

# Step 2: the real `src/gc/` collector run through the SAME list workload as
# gc_spike, to confirm a material fraction of the 3.34x survives the production
# block-allocated heap. `cargo bench --bench gc_module_bench`.
[[bench]]
name = "gc_module_bench"
harness = false

# Spike: GC ladder rung 3 — does Cranelift-JIT'd native code, operating on the
# word-sized `Copy` Value, materially beat the interpreter dispatch path?
# Three shapes (fib / sumto-acc / cons-build), three engines (tree-walk /
# AOT-direct-dispatch / JIT), paired min-of-N. `cargo run --release --bench
# jit_spike`. See `design/jit-spike-handoff.md`.
[[bench]]
name = "jit_spike"
harness = false
# The spike drives Cranelift directly, so it builds only when the `jit` feature
# (which brings in the cranelift-* deps) is active: `cargo run --release
# --features jit --bench jit_spike`. Without the feature `--all-targets` skips
# it, keeping default gates Cranelift-free.
required-features = ["jit"]

# Win A spike: do native bodies with DIRECT native call edges (mutual
# return_call / call to the peer's code pointer) beat the FFI-dispatch-per-call
# model (the J2 / shen-go shape) on cross-function, call-dominated work? Two
# shapes (even?/odd? mutual tail, ping/pong non-tail CPS), four engines. `cargo
# run --release --features jit --bench jit_winA_spike`. See
# `arch_unboxed_native_codegen.md` + `design/jit-spike-handoff.md`.
[[bench]]
name = "jit_winA_spike"
harness = false
required-features = ["jit"]


[[bench]]
name = "normal_form_aot"
harness = false

[[bench]]
name = "authz_served"
harness = false
